--- a/index.html
+++ b/index.html
@@ -13,41 +13,32 @@
     <body>
         <div class="container">
             <header>
-                <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/d/de/Wikipedia-logo_%28inverse%29.png"
-                    alt="Wikipedia Logo"
-                    width="300"
-                    class="header-image"
-                />
-                <h1 class="header-title">Wiki Search</h1>
+                <!-- <h1 class="header-title">Wiki Search</h1> -->
                 <div class="header-search-bar">
                     <input
                         id="input" type="text" class="search-bar-input" 
-                        placeholder="Search for anything" autofocus required
+                        placeholder="search for anything" autofocus required
                     />
-
+               
                     <button id="submit" type="button" class="search-bar-button" aria-label="search">
                         <!-- inline SVG search icon -->
                         <svg
                             version="1.1"
                             id="Layer_1"
-                            x="0px"
-                            y="0px"
-                            width="15px"
-                            height="15px"
+                            width="35px"
+                            height="35px"
                             viewBox="0 0 25 25"
-                            enable-background="new 0 0 25 25"
-                            xml:space="preserve"
-                        >
+                            xml:space="preserve">
                             <path
-                                fill="#C0C0C0"
+                                fill="#d9d9d9"
                                 d="M23.888,21.266l-5.629-5.628c1.1-1.604,1.742-3.545,1.742-5.637C20.001,4.478,15.526,0,10,0
                             C4.478,0,0,4.478,0,10.001S4.478,20,10,20c2.204,0,4.233-0.721,5.885-1.927l5.598,5.597c0.717,0.718,1.838,0.761,2.5,0.097
-                            C24.647,23.104,24.604,21.983,23.888,21.266z M10,16.748c-3.728,0-6.749-3.021-6.749-6.747c0-3.728,3.021-6.749,6.749-6.749c3.729,0,6.749,3.021,6.749,6.749C16.749,13.728,13.729,16.748,10,16.748z"
-                            />
+                            C24.647,23.104,24.604,21.983,23.888,21.266z M10,16.748c-3.728,0-6.749-3.021-6.749-6.747c0-3.728,3.021-6.749,6.749-6.749c3.729,0,6.749,3.021,6.749,6.749C16.749,13.728,13.729,16.748,10,16.748z"/>
                         </svg>
                     </button>
                 </div>
+
+                <a id="random" target="_blank" href="https://en.wikipedia.org/wiki/Special:Random">undecided?</a>
             </header>
         </div>
 
